--- a/算法/前端常见编程题.md
+++ b/算法/前端常见编程题.md
@@ -143,20 +143,66 @@ console.log(isArray3(arr));
 console.log(isArray4(arr));
 ```
 
-8. 间隔打印
+### 9. 间隔打印
 
-   ```javascript
-       function s(time){
-           return new Promise((resolve, reject) => {
-               setTimeout(resolve,time);
-           })
-       }
-       async function sleep(){
-           for(var i=0; i < 5; i++){
-               await s(1000);
-               console.log(i)
-           }
-       }
-   ```
+```javascript
+    function s(time){
+        return new Promise((resolve, reject) => {
+            setTimeout(resolve,time);
+        })
+    }
+    async function sleep(){
+        for(var i=0; i < 5; i++){
+            await s(1000);
+            console.log(i)
+        }
+    }
+```
 
-   
+### 10.  快排的两种实现方式
+
+```js
+function quickSort_with_loop(arr){
+    let stack = [];
+    stack.push([0,arr.length - 1]);
+
+    while(stack.length) {
+        let top = stack.pop();
+        let l = top[0], i = l;
+        let r = top[1], j = r;
+        let mid = arr[(i + j) >> 1];
+
+        do {
+            while (arr[i] < mid) ++i;
+            while (arr[j] > mid) --j;
+            if (i <= j) {
+                swap(arr,i,j)
+                ++i;
+                --j;
+            }
+        } while (i <= j);
+        if (i < r) stack.push([i, r]);
+        if (l < j) stack.push([l, j]);
+    }
+}
+const swap = function (arr, i, j){
+    //数组异或交换陷阱，当两个数相同时，交换后会为0
+    if(arr[i] == arr[j]) return;
+    arr[i] ^= arr[j];
+    arr[j] ^= arr[i];
+    arr[i] ^= arr[j];
+}
+
+function quickSort(arr,l, r){
+    if(l >= r) return;
+    let i = l-1,j = r+1,pivot = arr[l + r >> 1];
+    while (i < j){
+        do i++;while (arr[i] < pivot);
+        do j--;while (arr[j] > pivot);
+        if(i < j) swap(arr,i,j);
+    }
+    quickSort(arr,l,j);
+    quickSort(arr,j+1,r)
+}
+```
+
